# openclaw-security-audit

./: .gitignore  CHANGELOG.md  COMPETITIVE-ANALYSIS.md  CONTRIBUTING.md  QUICKSTART.md  README.md  SECURITY-SUITE-PLAN.md  SECURITY.md  THREAT-MODEL.md  UPDATE_GUIDE.md  audit.py  docker-compose.yml  install.sh  known_malicious.json  pyproject.toml
.github/: README.md
.github/workflows/: security-audit.yml
docs/: virustotal-integration-design.md
examples/: sample-report.md
modules/: __init__.py  base.py  behavioral_baseline.py  channel_auditor.py  config_hardening.py  config_scanner.py  cve_mapper.py  injection_scanner.py  permission_auditor.py  skill_scanner.py
tests/: test_channel_auditor.py  test_cve_mapper.py  test_injection_scanner.py
tests/fixtures/: README.md
tests/fixtures/clean_skills/normal/: SKILL.md
tests/fixtures/hardened/: SKILL.md
tests/fixtures/vulnerable/: .env  SKILL.md
