[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-security-audit"
version = "1.0.0"
description = "Comprehensive security scanner for OpenClaw AI agent deployments"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["openclaw", "security", "audit", "ai-agents", "vulnerability-scanner"]
authors = [
    {name = "OpenClaw Security Team", email = "security@yourcompany.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

[project.urls]
Homepage = "https://github.com/your-org/openclaw-security-audit"
Documentation = "https://github.com/your-org/openclaw-security-audit#readme"
Repository = "https://github.com/your-org/openclaw-security-audit.git"
"Bug Tracker" = "https://github.com/your-org/openclaw-security-audit/issues"

[project.scripts]
openclaw-audit = "audit:main"

[tool.setuptools]
py-modules = ["audit"]

[tool.setuptools.package-data]
"*" = ["known_malicious.json"]
